--- a/board/cyberoam/cr15wi/rootfs-overlay/etc/dnsmasq.conf
+++ b/board/cyberoam/cr15wi/rootfs-overlay/etc/dnsmasq.conf
@@ -154,7 +154,7 @@ interface=wlan0
 # a lease time. If you have more than one network, you will need to
 # repeat this for each network on which you want to supply DHCP
 # service.
-dhcp-range=192.168.42.50,192.168.42.150,12h
+#dhcp-range=192.168.42.50,192.168.42.150,12h
 
 # This is an example of a DHCP range where the netmask is given. This
 # is needed for networks we reach the dnsmasq DHCP server via a relay
@@ -512,12 +512,12 @@ dhcp-range=192.168.42.50,192.168.42.150,12h
 #dhcp-boot=/var/ftpd/pxelinux.0,boothost,tftp_server_name
 
 # Set the limit on DHCP leases, the default is 150
-dhcp-lease-max=150
+#dhcp-lease-max=150
 
 # The DHCP server needs somewhere on disk to keep its lease database.
 # This defaults to a sane location, but if you want to change it, use
 # the line below.
-dhcp-leasefile=/var/lib/misc/dnsmasq.leases
+#dhcp-leasefile=/var/lib/misc/dnsmasq.leases
 
 # Set the DHCP server to authoritative mode. In this mode it will barge in
 # and take over the lease for any client which broadcasts on the network,
