--- a/board/cyberoam/cr15wi/rootfs-overlay/etc/freeradius/clients.conf
+++ b/board/cyberoam/cr15wi/rootfs-overlay/etc/freeradius/clients.conf
@@ -1,6 +1,6 @@
-client testclient {  # here testclient is the name of the client. Replace with your own value
-        ipaddr  = *
-        secret          = testing123
-        shortname       = localhost
-        nastype         = other
+client localhost {  # here localhost is the name of the client. Replace with your own value
+        ipaddr  = 127.0.0.1
+        secret = testing123
+        shortname = localhost
+        nastype = other
 }
