--- a/configs/cyberoam_cr15wi_pepperspot_defconfig
+++ b/configs/cyberoam_cr15wi_pepperspot_defconfig
@@ -11,16 +11,31 @@ BR2_LINUX_KERNEL_USE_CUSTOM_CONFIG=y
 BR2_LINUX_KERNEL_CUSTOM_CONFIG_FILE="board/cyberoam/cr15wi/kernel.config"
 BR2_LINUX_KERNEL_INSTALL_TARGET=y
 BR2_PACKAGE_BUSYBOX_SHOW_OTHERS=y
+BR2_PACKAGE_LINUX_FIRMWARE=y
+BR2_PACKAGE_LINUX_FIRMWARE_RALINK_RT2XX=y
 BR2_PACKAGE_LSHW=y
 BR2_PACKAGE_PCIUTILS=y
+BR2_PACKAGE_PERL=y
+BR2_PACKAGE_OPENSSL_BIN=y
+BR2_PACKAGE_DNSMASQ=y
+# BR2_PACKAGE_DNSMASQ_TFTP is not set
+# BR2_PACKAGE_DNSMASQ_DHCP is not set
+BR2_PACKAGE_DROPBEAR=y
 BR2_PACKAGE_FREERADIUS=y
 BR2_PACKAGE_HOSTAPD=y
+BR2_PACKAGE_IPTABLES=y
 BR2_PACKAGE_LIGHTTPD=y
 BR2_PACKAGE_LIGHTTPD_OPENSSL=y
 BR2_PACKAGE_PEPPERSPOT=y
+BR2_PACKAGE_QUAGGA=y
+BR2_PACKAGE_QUAGGA_ZEBRA=y
+BR2_PACKAGE_QUAGGA_RIPD=y
+BR2_PACKAGE_QUAGGA_RIPNGD=y
+BR2_PACKAGE_WIRELESS_TOOLS=y
+BR2_PACKAGE_WIRELESS_TOOLS_LIB=y
 BR2_TARGET_ROOTFS_EXT2=y
 BR2_TARGET_ROOTFS_EXT2_4=y
-BR2_TARGET_ROOTFS_EXT2_BLOCKS=24576
+BR2_TARGET_ROOTFS_EXT2_BLOCKS=65536
 BR2_TARGET_ROOTFS_EXT2_RESBLKS=5
 # BR2_TARGET_ROOTFS_TAR is not set
 BR2_TARGET_GRUB2=y
