rootfs-overlay: add IPv6 configuration for pepperspot

--- a/board/cyberoam/cr15wi/rootfs-overlay/etc/pepper.conf
+++ b/board/cyberoam/cr15wi/rootfs-overlay/etc/pepper.conf
@@ -31,7 +31,8 @@ pidfile /var/run/pepper.pid
 # TAG: IP version
 # Accepted version of IP protocol
 # Can be 'ipv6', 'ipv4' or 'dual'
-ipversion ipv4
+#ipversion ipv4
+ipversion dual
 
 # TUN parameters
 
@@ -56,11 +57,11 @@ net 192.168.42.0/24
 
 # TAG : staticipv6
 # IPv6 address to listen to on TUN interface
-#staticipv6 2001:db8:1::1234
+staticipv6 2001:470:7433:1::1
 
 # TAG: ipv6prefix
 # IPv6 Prefix delegated to the Wi-Fi link
-ipv6prefix 2001:db8:1::/64
+ipv6prefix 2001:470:7433:1::/64
 
 # TAG: dns1
 # Primary DNS server. 
@@ -116,9 +117,7 @@ domain pepperspot.local
 # TAG: radiuslisten
 # IP address to listen to
 # Normally you do not need to uncomment this tag.
-#radiuslisten ::1 
 radiuslisten 127.0.0.1
-#radiuslisten 192.168.42.1
 
 # TAG: radiusserver1
 # IP address of radius server 1
@@ -261,14 +260,14 @@ uamserver https://192.168.42.1/hotspotlogin.pl
 
 # TAG: uamserver6
 # URL of web server handling authentication for IPv6 client.
-#uamserver6 https://[2001:db8:1::1234]/cgi-bin/hotspotlogin.cgi
+uamserver6 https://[2001:470:7433:1::1]/hotspotlogin.pl
 
 # TAG: uamhomepage
 # URL of welcome homepage.
 # Unauthenticated users will be redirected to this URL. If not specified
 # users will be redirected to the uamserver instead.
 # Normally you do not need to uncomment this tag.
-uamhomepage http://192.168.42.1:3990/prelogin
+uamhomepage http://pepper:3990/prelogin
 
 # TAG: uamsecret
 # Shared between pepper and authentication web server (PAP)
@@ -292,7 +291,6 @@ uamport 3990
 # Normally you do not need to uncomment this tag.
 #uamallowed www.pepperspot.info,10.11.12.0/24
 #uamallowed cas.pepperspot.info,192.168.182.0/24
-uamallowed 192.168.42.0/24
 
 # TAG: uamanydns
 # If this flag is given unauthenticated users are allowed to use
