rootfs-overlay: add IPv6 configuration for lighttpd

--- a/board/cyberoam/cr15wi/rootfs-overlay/etc/lighttpd/lighttpd.conf
+++ b/board/cyberoam/cr15wi/rootfs-overlay/etc/lighttpd/lighttpd.conf
@@ -90,12 +90,13 @@ server.port = 80
 ##
 ## Use IPv6?
 ##
-# server.use-ipv6 = "enable"
+server.use-ipv6 = "enable"
 
 ##
 ## bind to a specific IP
 ##
 #server.bind = "localhost"
+server.bind = "2001:470:7433:1::1"
 
 ##
 ## Run as a different username/groupname.
@@ -399,7 +400,7 @@ server.upload-dirs = ( "/var/tmp" )
 ##
 #   ssl.disable-client-renegotiation = "enable"
 ##
-$SERVER["socket"] == "0.0.0.0:443" {
+$SERVER["socket"] == "192.168.42.1:443" {
      ssl.engine                  = "enable"
      ssl.pemfile                 = "/etc/lighttpd/lighttpd.pem"
 ##     #
@@ -429,6 +430,21 @@ $SERVER["socket"] == "0.0.0.0:443" {
      server.document-root        = "/var/www/"
   }
 ##
+#
+# IPv6 SSL
+# TODO: use only wlan addresses
+$SERVER["socket"] == "[2001:470:7433:1::1]:443" {
+     ssl.engine                  = "enable"
+     ssl.pemfile                 = "/etc/lighttpd/lighttpd.pem"
+     ssl.cipher-list             = "aRSA+HIGH !3DES +kEDH +kRSA !kSRP !kPSK"
+     server.name                 = "pepperspot"
+     server.document-root        = "/var/www/"
+}
+
+# Also listen on IPv4
+$SERVER["socket"] == "192.168.42.1:80" {
+}
+
 
 ## If you have a .crt and a .key file, cat them together into a
 ## single PEM file:
