--- a/configs/cyberoam_cr15wi_pepperspot_defconfig
+++ b/configs/cyberoam_cr15wi_pepperspot_defconfig
@@ -10,6 +10,7 @@ BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_USE_CUSTOM_CONFIG=y
 BR2_LINUX_KERNEL_CUSTOM_CONFIG_FILE="board/cyberoam/cr15wi/kernel.config"
 BR2_LINUX_KERNEL_INSTALL_TARGET=y
+BR2_PACKAGE_BUSYBOX_CONFIG="board/cyberoam/cr15wi/busybox.config"
 BR2_PACKAGE_BUSYBOX_SHOW_OTHERS=y
 BR2_PACKAGE_LINUX_FIRMWARE=y
 BR2_PACKAGE_LINUX_FIRMWARE_RALINK_RT2XX=y
@@ -17,6 +18,8 @@ BR2_PACKAGE_LSHW=y
 BR2_PACKAGE_PCIUTILS=y
 BR2_PACKAGE_PERL=y
 BR2_PACKAGE_OPENSSL_BIN=y
+BR2_PACKAGE_NCURSES=y
+BR2_PACKAGE_PCRE=y
 BR2_PACKAGE_DNSMASQ=y
 # BR2_PACKAGE_DNSMASQ_TFTP is not set
 # BR2_PACKAGE_DNSMASQ_DHCP is not set
@@ -27,10 +30,7 @@ BR2_PACKAGE_IPTABLES=y
 BR2_PACKAGE_LIGHTTPD=y
 BR2_PACKAGE_LIGHTTPD_OPENSSL=y
 BR2_PACKAGE_PEPPERSPOT=y
-BR2_PACKAGE_QUAGGA=y
-BR2_PACKAGE_QUAGGA_ZEBRA=y
-BR2_PACKAGE_QUAGGA_RIPD=y
-BR2_PACKAGE_QUAGGA_RIPNGD=y
+BR2_PACKAGE_RADVD=y
 BR2_PACKAGE_WIRELESS_TOOLS=y
 BR2_PACKAGE_WIRELESS_TOOLS_LIB=y
 BR2_TARGET_ROOTFS_EXT2=y
