--- a/configs/cyberoam_cr15wi_pepperspot_defconfig
+++ b/configs/cyberoam_cr15wi_pepperspot_defconfig
@@ -5,6 +5,7 @@ BR2_GCC_ENABLE_OPENMP=y
 BR2_PACKAGE_HOST_GDB=y
 BR2_TARGET_GENERIC_GETTY_PORT="tty1"
 BR2_ROOTFS_OVERLAY="board/cyberoam/cr15wi/rootfs-overlay/"
+BR2_ROOTFS_POST_BUILD_SCRIPT="board/cyberoam/cr15wi/postbuild.sh"
 BR2_ROOTFS_POST_IMAGE_SCRIPT="board/cyberoam/cr15wi/postimage.sh"
 BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_USE_CUSTOM_CONFIG=y
