--- a/configs/cyberoam_cr15wi_pepperspot_defconfig
+++ b/configs/cyberoam_cr15wi_pepperspot_defconfig
@@ -13,12 +13,14 @@ BR2_LINUX_KERNEL_CUSTOM_CONFIG_FILE="board/cyberoam/cr15wi/kernel.config"
 BR2_LINUX_KERNEL_INSTALL_TARGET=y
 BR2_PACKAGE_BUSYBOX_CONFIG="board/cyberoam/cr15wi/busybox.config"
 BR2_PACKAGE_BUSYBOX_SHOW_OTHERS=y
+BR2_PACKAGE_FLEX=y
 BR2_PACKAGE_LINUX_FIRMWARE=y
 BR2_PACKAGE_LINUX_FIRMWARE_RALINK_RT2XX=y
 BR2_PACKAGE_LSHW=y
 BR2_PACKAGE_PCIUTILS=y
 BR2_PACKAGE_PERL=y
 BR2_PACKAGE_OPENSSL_BIN=y
+BR2_PACKAGE_LIBTALLOC=y
 BR2_PACKAGE_NCURSES=y
 BR2_PACKAGE_PCRE=y
 BR2_PACKAGE_DNSMASQ=y
