--- a/configs/cyberoam_cr15wi_pepperspot_prebuilt_toolchain_defconfig
+++ b/configs/cyberoam_cr15wi_pepperspot_prebuilt_toolchain_defconfig
@@ -1,7 +1,7 @@
 BR2_x86_c32=y
 BR2_TOOLCHAIN_EXTERNAL=y
 BR2_TOOLCHAIN_EXTERNAL_CUSTOM=y
-BR2_TOOLCHAIN_EXTERNAL_PATH="i686-cyberoam_cr15wi-linux-gnu/usr"
+BR2_TOOLCHAIN_EXTERNAL_PATH="$(TOPDIR)/i686-cyberoam_cr15wi-linux-gnu/usr"
 BR2_TOOLCHAIN_EXTERNAL_CUSTOM_PREFIX="i686-cyberoam_cr15wi-linux-gnu"
 BR2_TOOLCHAIN_EXTERNAL_HEADERS_3_16=y
 BR2_TOOLCHAIN_EXTERNAL_CUSTOM_GLIBC=y
@@ -20,6 +20,7 @@ BR2_PACKAGE_BUSYBOX_SHOW_OTHERS=y
 BR2_PACKAGE_FLEX=y
 BR2_PACKAGE_LINUX_FIRMWARE=y
 BR2_PACKAGE_LINUX_FIRMWARE_RALINK_RT2XX=y
+BR2_PACKAGE_LSHW=y
 BR2_PACKAGE_PCIUTILS=y
 BR2_PACKAGE_PERL=y
 BR2_PACKAGE_OPENSSL_BIN=y
@@ -30,10 +31,13 @@ BR2_PACKAGE_DNSMASQ=y
 # BR2_PACKAGE_DNSMASQ_TFTP is not set
 # BR2_PACKAGE_DNSMASQ_DHCP is not set
 BR2_PACKAGE_DROPBEAR=y
+BR2_PACKAGE_FREERADIUS=y
 BR2_PACKAGE_HOSTAPD=y
 BR2_PACKAGE_IPTABLES=y
 BR2_PACKAGE_LIGHTTPD=y
 BR2_PACKAGE_LIGHTTPD_OPENSSL=y
+BR2_PACKAGE_PEPPERSPOT=y
+BR2_PACKAGE_RADVD=y
 BR2_PACKAGE_WIRELESS_TOOLS=y
 BR2_PACKAGE_WIRELESS_TOOLS_LIB=y
 BR2_TARGET_ROOTFS_EXT2=y
