--- a/package/pepperspot/Config.in
+++ b/package/pepperspot/Config.in
@@ -1,11 +1,11 @@
 config BR2_PACKAGE_PEPPERSPOT
 	bool "pepperspot"
-	depends on BR2_TOOLCHAIN_HAS_THREADS # libusb
+	depends on BR2_TOOLCHAIN_HAS_THREADS
 	depends on BR2_USE_WCHAR
 	depends on BR2_USE_MMU # fork()
 	depends on BR2_FREERADIUS
 	help
-	  pepperspot foo
+	  PepperSpot is a captive portal or wireless LAN access point controller which support the IPv6 protocol. It supports web based login and it supports Wireless Protected Access (WPA). Authentication is handled by your favorite radius server (over IPv4/IPv6).
 
 	  http://pepperspot.sourceforge.net
 
