rootfs-overlay: fix pepperspot.conf

--- a/board/cyberoam/cr15wi/rootfs-overlay/etc/pepper.conf
+++ b/board/cyberoam/cr15wi/rootfs-overlay/etc/pepper.conf
@@ -75,7 +75,7 @@ dns1 192.168.42.1
 # Will be suggested to the client.
 # If omitted the system default will be used.
 # Normally you do not need to uncomment this tag.
-dns2 192.168.42.1
+#dns2 2001:470:7433:1::1
 
 # TAG: domain
 # Domain name
